--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
-    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query": "^5.0.0-alpha.68",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -23,5 +23,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.0.0-alpha.68",
+    "add": "^2.0.6",
+    "yarn": "^1.22.19"
   }
 }
