--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-hook-form-mui": "^6.2.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
