--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.0.0-alpha.68",
-    "add": "^2.0.6",
-    "yarn": "^1.22.19"
+    "@tanstack/eslint-plugin-query": "^5.0.0-alpha.68"
   }
 }
